fix: scroll on overflow

--- a/src/features/search/RecentSearches/RecentSearches.module.scss
+++ b/src/features/search/RecentSearches/RecentSearches.module.scss
@@ -2,6 +2,8 @@
 
 .container {
   width: 100%;
+  height: 100%;
+  overflow: scroll;
 }
 
 .header {
